# docx

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  docx  docx.sln  main_program.vcxproj  main_program.vcxproj.filters
examples/: zipdocx.py
examples/docx/: emptydoc.docx
examples/docx/temp/: temp.docx  test.docx
examples/docx/temp/docProps/: core.xml
examples/docx/temp/word/: document.xml  settings.xml
include/: docx_obj.hpp  docx_xml_utils.hpp  xmlNode.hpp
include/libxml/: Makefile  xmlversion.h
main_program.dir/Debug/: main_program.exe.recipe  main_program.ilk
main_program.dir/Debug/main_program.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main_program.lastbuildstate
src/: main.cpp  paragraphs.c  paragraphs.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
